--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- 使用 tools:overrideLibrary 强制兼容插件 -->
+    <uses-sdk tools:overrideLibrary="io.abner.flutter_js" />
+    
     <application
         android:label="Miru"
         android:name="${applicationName}"
